--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,10 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Bootstrap vcpkg
-      run: ${{ github.workspace }}/vcpkg/bootstrap-vcpkg.bat
+      run: cmd /c ${{ github.workspace }}/vcpkg/bootstrap-vcpkg.bat
 
     - name: Install vcpkg dependencies
-      run: ${{ github.workspace }}/vcpkg/vcpkg.exe install boost protobuf spdlog abseil nlohmann-json --triplet x64-windows
+      run: cmd /c ${{ github.workspace }}/vcpkg/vcpkg.exe install boost protobuf spdlog abseil nlohmann-json --triplet x64-windows
 
     - name: Configure CMake for Windows
       run: cmake -G "Visual Studio 17 2022" -S cpp_portfolio -B cpp_portfolio/build -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake
