--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       run: cmd /c vcpkg/bootstrap-vcpkg.bat # Path to vcpkg from the workspace root
 
     - name: Install vcpkg dependencies
-      run: cmd /c vcpkg/vcpkg.exe install boost protobuf spdlog abseil nlohmann-json --triplet x64-windows
+      run: cmd /c vcpkg/vcpkg.exe install boost protobuf spdlog abseil nlohmann-json yaml-cpp --triplet x64-windows
 
     - name: Configure CMake for Windows
       run: cmake -G "Visual Studio 17 2022" -S cpp_portfolio -B cpp_portfolio/build -DCMAKE_TOOLCHAIN_FILE=vcpkg/scripts/buildsystems/vcpkg.cmake
@@ -44,7 +44,7 @@ jobs:
       run: brew doctor
 
     - name: Install dependencies with Homebrew
-      run: brew install boost protobuf spdlog abseil-cpp nlohmann-json cmake
+      run: brew install boost protobuf spdlog abseil-cpp nlohmann-json yaml-cpp cmake
 
     - name: Configure CMake for macOS
       run: cmake -S cpp_portfolio -B cpp_portfolio/build
@@ -61,7 +61,7 @@ jobs:
       run: sudo apt-get update
 
     - name: Install dependencies
-      run: sudo apt-get install -y build-essential cmake libboost-all-dev libprotobuf-dev protobuf-compiler libspdlog-dev libyaml-cpp-dev nlohmann-json3-dev
+      run: sudo apt-get install -y build-essential cmake libboost-all-dev libprotobuf-dev protobuf-compiler libspdlog-dev libyaml-cpp-dev nlohmann-json3-dev libabsl-dev
 
     - name: Configure CMake for Linux
       run: cmake -S cpp_portfolio -B cpp_portfolio/build -DCMAKE_BUILD_TYPE=Release
